JVMOPTS and schedule changes for better playback?